# libcvc

./: .gitignore  CMakeLists.txt  README.md
include/: cvc.h  cvc_oids.h  cvc_status.h  cvc_tags.h
src/: cvc_build.c  cvc_parse.c  cvc_sign.c  cvc_tlv.c  cvc_tlv.h  cvc_write.c
tests/: test_libcvc.c
tests/vectors/: ZZATCVCA00001.cvcert  ZZATCVCA00001.pub.pem  ZZATDVCA00001.cvcert  ZZATDVCA00001.pub.pem  ZZATTERM00001.cvcert
tools/: gen_cert_libcvc.c  gen_weierstrass_variants.c
